<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/error_lav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_iv"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/error_message"
        app:lottie_repeatMode="restart" />

    <ImageView
        android:id="@+id/error_image_iv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/error_image"
        android:visibility="invisible"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/error_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_image_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/oh_snap"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/error_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_title_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/no_internet_error_message"
        android:textColor="@color/error_gray"
        android:textSize="14sp" />

    <Button
        android:id="@+id/error_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_message_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/try_again"
        android:textColor="@color/error_red"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>