<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rachitgoyal.pharmeasytask.modules.detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <android.support.v7.widget.CardView
        android:id="@+id/user_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_iv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/friends_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_hand_shake" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:textColor="@color/name_red"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="User Name" />

            <TextView
                android:id="@+id/profession_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/profession_gray"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Profession" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/profession_tv"
                android:layout_marginTop="30dp"
                android:background="@color/divider_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/divider"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/followers_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="46" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/followers"
                        android:textColor="@color/profession_gray"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="@color/divider_gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/following_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="57" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/following"
                        android:textColor="@color/profession_gray"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="@color/divider_gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/purchases_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="294" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/purchases"
                        android:textColor="@color/profession_gray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/user_cv"
        android:layout_margin="10dp"
        android:background="@drawable/button_bg"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/add_as_friend"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
